--- a/users/templates/website/contact.html
+++ b/users/templates/website/contact.html
@@ -8,24 +8,25 @@
 <!--<![endif]-->
 
 <head>
+{% load static %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
-	<title>Be</title>
+	<title>Water Access Rwanda</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="{% static "web/images/favicon.ico"%}">
 	<!-- FONTS -->
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Sora:100,200,300,400,400italic,500,600,700,700italic,900'>
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,400italic,500,600,700,700italic,900'>
 	<!-- CSS -->
-	<link rel='stylesheet' href='css/global.css'>
-	<link rel='stylesheet' href='css/structure.css'>
-	<link rel='stylesheet' href='css/scooterrental.css'>
-	<link rel='stylesheet' href='css/custom.css'> </head>
+	<link rel='stylesheet' href="{% static "web/css/global.css"%}">
+	<link rel='stylesheet' href="{% static "web/css/structure.css"%}">
+	<link rel='stylesheet' href="{% static "web/css/scooterrental.css"%}">
+	<link rel='stylesheet' href="{% static "web/css/custom.css"%}"> </head>
 
 <body class="page-template-default page color-custom style-simple button-custom layout-full-width if-zoom if-border-hide no-content-padding no-shadows header-classic sticky-header sticky-tb-color ab-hide subheader-both-center menu-link-color menuo-right menuo-no-borders footer-copy-center mobile-tb-hide mobile-side-slide mobile-mini-mr-ll tablet-sticky mobile-sticky ">
 	<div id="Wrapper">
@@ -36,22 +37,22 @@
 						<div class="column one">
 							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="index.html" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina></a>
 								</div>
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li> <a href="index.html"><span>Home</span></a> </li>
-											<li> <a href="about.html"><span>About us</span></a> </li>
-											<li> <a href="service.html"><span>Service</span></a> </li>
-											<li> <a href="ijabo.html"><span>Ijabo</span></a> </li>
-											<li> <a href="blog.html"><span>Blog</span></a> </li>
-											<li class="current-menu-item"> <a href="contact.html"><span>Contact</span></a> </li>
+											<li class=" current-menu-item page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
+											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
+											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
+											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
+											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
+											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
 							<div class="top_bar_right">
-								<div class="top_bar_right_wrapper"> <a href="shop.html" class="action_button" target="_blank">BUY NOW</a> </div>
+								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >BUY NOW</a> </div>
 							</div>
 						</div>
 					</div>
@@ -64,7 +65,7 @@
 					<div class="entry-content">
 						<div class="section mcb-section mcb-section-0c680f8ea full-width" style="padding-bottom:120px;padding-left:5%;padding-right:5%">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-d5d07472b one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url(images/scooterrental-section-bg1.png);background-repeat:no-repeat;background-position:left center">
+								<div class="wrap mcb-wrap mcb-wrap-d5d07472b one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url({% static "web/images/scooterrental-section-bg1.png" %});background-repeat:no-repeat;background-position:left center">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-04c5d7bfe one-sixth column_placeholder">
 											<div class="placeholder"> &nbsp; </div>
@@ -77,9 +78,7 @@
 													<br>
 													<span class="themecolor">contact</span> with us</h1>
 												<hr class="no_line" style="margin:0 auto 20px">
-												<h5 style="color:#FFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-													<br>
-													Donec in sem et urna faucibus bibendum.</h5> </div>
+												 </div>
 										</div>
 										<div class="column mcb-column mcb-item-8hk6k0yi6 one column_divider">
 											<hr class="no_line" style="margin:0 auto 80px"> </div>
@@ -90,11 +89,10 @@
 											<div class="column_attr clearfix" style>
 												<h2 class="themecolor">Address</h2>
 												<hr class="no_line" style="margin:0 auto 35px">
-												<h4 style="color:#FFF;"> Level 13, 2 Elizabeth St,
+												<h4 style="color:#FFF;">157 KN 2 Ave,
 													<br>
-													Melbourne, Victoria 3000,
-													<br>
-													Australia</h4>
+													Kigali, Nyarugenge
+													</h4>
 												<hr class="no_line" style="margin:0 auto 50px">
 												<h3 style="color:#FFF;"><i class="icon-mobile" style></i> +42 30 50 7789</h3>
 												<h3 style="color:#FFF; word-wrap: break-word;"><i class="icon-mail" style></i><a href="#" >noreply@envato.com</a></h3> </div>
@@ -136,13 +134,13 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">MEET US</h6>
+									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="ijabo.html">How it works</a> </p>
-									<p> <a href="service.html">Find a vehicle</a> </p>
-									<p> <a href="index.html#pricing">Pricing</a> </p>
 									<p> <a href="about.html"> About us</a> </p>
+									<p> <a href="service.html">Service</a> </p>
+									<p> <a href="ijabo.html">How it works</a> </p>
 									<p> <a href="contact.html">Contact</a> </p>
+									<p> <a href="#">fAQs</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -151,15 +149,15 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Rent a scooter
+									<h3>Simple, Affordable and Reliable Access to
 										<br>
-										<span class="themecolor">just like that!</span></h3>
+										<span class="themecolor">Clean Safe Water</span></h3>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<a href="#"><img src="images/scooterrental-footer-btn1.png"></a>
-									<a href="#"><img src="images/scooterrental-footer-btn2.png"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="contact.html">FIND OUT MORE <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
-									<hr class="no_line" style="margin:0 auto 80px"> <img src="images/scooterrental-footer-logo.png"> </div>
+									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
 					</div>
@@ -169,11 +167,11 @@
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="#">News</a> </p>
-									<p> <a href="#">FAQ</a> </p>
-									<p> <a href="#">Work</a> </p>
-									<p> <a href="#"> Franchise</a> </p>
-									<p> <a href="#">Partners</a> </p>
+									<p> <a href="#">Inuma</a> </p>
+									<p> <a href="#">Amazi</a> </p>
+									<p> <a href="#">Uhira</a> </p>
+									<p> <a href="#">Voma</a> </p>
+									<p> <a href="#">Ijabo</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -183,7 +181,7 @@
 			<div class="footer_copy">
 				<div class="container">
 					<div class="column one">
-						<div class="copyright"> &copy; 2021 BeScooterRental - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="https://1.envato.market/9ZxXY">BeantownThemes</a> </div>
+						<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 					</div>
 				</div>
 			</div>
@@ -198,14 +196,14 @@
 	</div>
 	<div id="body_overlay"></div>
 	<!-- JS -->
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/mfn.menu.js"></script>
-	<script src="js/jquery.plugins.js"></script>
-	<script src="js/jquery.jplayer.min.js"></script>
-	<script src="js/animations/animations.js"></script>
-	<script src="js/translate3d.js"></script>
-	<script src="js/scripts.js"></script>
-	<script src="js/email.js"></script>
+	<script src="{% static "web/js/jquery-2.1.4.min.js"%}"></script>
+	<script src="{% static "web/js/mfn.menu.js"%}"></script>
+	<script src="{% static "web/js/jquery.plugins.js"%}"></script>
+	<script src="{% static "web/js/jquery.jplayer.min.js"%}"></script>
+	<script src="{% static "web/js/animations/animations.js"%}"></script>
+	<script src="{% static "web/js/translate3d.js"%}"></script>
+	<script src="{% static "web/js/scripts.js"%}"></script>
+	<script src="{% static "web/js/email.js"%}"></script>
 </body>
 
 </html>
