--- a/users/templates/website/product_page.html
+++ b/users/templates/website/product_page.html
@@ -8,19 +8,20 @@
 <!--<![endif]-->
 
 <head>
+{% load static %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Be</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Water Access Rwanda</title>
+    <meta name="description" content="Water Access">
+    <meta name="author" content="Water Access">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="{% static "web/images/favicon.ico" %}">
 
     <!-- FONTS -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
@@ -29,13 +30,13 @@
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lora:100,300,400,400italic,500,700,700italic'>
 
     <!-- CSS -->
-    <link rel='stylesheet' href='css/global.css'>
-    <link rel='stylesheet' href='css/structure.css'>
-    <link rel='stylesheet' href='css/betheme.css'>
-    <link rel='stylesheet' href='css/custom.css'>
+    <link rel='stylesheet' href="{% static "web/css/global.css"%}">
+    <link rel='stylesheet' href="{% static "web/css/structure.css"%}">
+    <link rel='stylesheet' href="{% static "web/css/betheme.css"%}">
+    <link rel='stylesheet' href="{% static "web/css/custom.css"%}">
 
 </head>
-
+{% load static %}
 <body class="woocommerce woocommerce-page with_aside aside_right color-custom style-default layout-full-width header-plain header-fw minimalist-header sticky-header sticky-white ab-hide subheader-both-center menuo-last menuo-right mm-vertical mobile-tb-hide mobile-mini-mr-ll">
     <div id="Wrapper">
         <div id="Header_wrapper">
@@ -45,17 +46,17 @@
 						<div class="column one">
 							<div class="top_bar_left clearfix"  >
 								<div class="logo">
-									<a id="logo" href="index.html" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png"%}"   data-height="50" alt="scooterrental" data-no-retina></a>
 								</div>
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main" >
-											<li> <a href="index.html"><span style="border:none;color:black">Home</span></a> </li>
-											<li> <a href="about.html"><span style="border:none;color:black">About us</span></a> </li>
-											<li> <a href="service.html"><span style="border:none;color:black">Service</span></a> </li>
-                                            <li> <a href="ijabo.html"><span>Ijabo</span></a> </li>
-											<li> <a href="blog.html"><span>Blog</span></a> </li>
-											<li> <a href="contact.html"><span style="border:none;color:black">Contact</span></a> </li>
+											<li> <a href="{% url 'index' %}"><span style="border:none;color:black">Home</span></a> </li>
+											<li> <a href="{% url 'about' %}"><span style="border:none;color:black">About us</span></a> </li>
+											<li> <a href="{% url 'service' %}"><span style="border:none;color:black">Service</span></a> </li>
+                                            <li> <a href="{% url 'ijabo' %}"><span style="border:none;color:black">Ijabo</span></a> </li>
+											<li> <a href="{% url 'blog' %}"><span style="border:none;color:black">Blog</span></a> </li>
+											<li> <a href="{% url 'contact_us' %}"><span style="border:none;color:black">Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
@@ -84,33 +85,33 @@
                                                 <div class="images">
                                                     <div class="image_frame scale-with-grid" ontouchstart="this.classList.toggle('hover');">
                                                         <div class="image_wrapper">
-                                                            <a href="images/poster_2_up.jpg" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
-                                                                <div class="mask"></div><img width="500" height="500" src="images/poster_2_up-500x500.jpg" class="scale-with-grid wp-post-image" alt="poster_2_up" title="poster_2_up" />
+                                                            <a href="{% static "web/images/poster_2_up.jpg"%}" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
+                                                                <div class="mask"></div><img width="500" height="500" src="{% static "web/images/poster_2_up-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="poster_2_up" title="poster_2_up" />
                                                             </a>
                                                             <div class="image_links">
-                                                                <a href="images/poster_2_up.jpg" class="woocommerce-main-image zoom" title=""><i class="icon-search"></i></a>
+                                                                <a href="{% static "web/images/poster_2_up.jpg"%}" class="woocommerce-main-image zoom" title=""><i class="icon-search"></i></a>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="thumbnails columns-3">
                                                         <div class="image_frame scale-with-grid" ontouchstart="this.classList.toggle('hover');">
                                                             <div class="image_wrapper">
-                                                                <a href="images/poster_3_up.jpg" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
-                                                                    <div class="mask"></div><img width="200" height="200" src="images/poster_3_up-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail" alt="poster_3_up" title="poster_3_up" caption="">
+                                                                <a href="{% static "web/images/poster_3_up.jpg"%}" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
+                                                                    <div class="mask"></div><img width="200" height="200" src="{% static "web/images/poster_3_up-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail" alt="poster_3_up" title="poster_3_up" caption="">
                                                                 </a>
                                                             </div>
                                                         </div>
                                                         <div class="image_frame scale-with-grid" ontouchstart="this.classList.toggle('hover');">
                                                             <div class="image_wrapper">
-                                                                <a href="images/poster_1_up.jpg" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
-                                                                    <div class="mask"></div><img width="200" height="200" src="images/poster_1_up-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail" alt="poster_1_up" title="poster_1_up" caption="">
+                                                                <a href="{% static "web/images/poster_1_up.jpg"%}" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
+                                                                    <div class="mask"></div><img width="200" height="200" src="{% static "web/images/poster_1_up-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail" alt="poster_1_up" title="poster_1_up" caption="">
                                                                 </a>
                                                             </div>
                                                         </div>
                                                         <div class="image_frame scale-with-grid" ontouchstart="this.classList.toggle('hover');">
                                                             <div class="image_wrapper">
-                                                                <a href="images/poster_5_up.jpg" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
-                                                                    <div class="mask"></div><img width="200" height="200" src="images/poster_5_up-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail" alt="poster_5_up" title="poster_5_up" caption="">
+                                                                <a href="{% static "web/images/poster_5_up.jpg"%}" class="woocommerce-main-image zoom" title="" data-rel="prettyPhoto[product-gallery]">
+                                                                    <div class="mask"></div><img width="200" height="200" src="{% static "web/images/poster_5_up-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail" alt="poster_5_up" title="poster_5_up" caption="">
                                                                 </a>
                                                             </div>
                                                         </div>
@@ -325,19 +326,19 @@
                             <h3>Related Products</h3>
                             <ul class="product_list_widget">
                                 <li>
-                                    <a href="product_page.html" title="Woo Single #2"> <img width="200" height="200" src="images/cd_6_angle-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Single #2</span> </a><del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>3.00</span></del><ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>2.00</span></ins>
+                                    <a href="product_page.html" title="Woo Single #2"> <img width="200" height="200" src="{% static "web/images/cd_6_angle-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Single #2</span> </a><del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>3.00</span></del><ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>2.00</span></ins>
                                 </li>
                                 <li>
-                                    <a href="product_page.html" title="Woo Album #4"> <img width="200" height="200" src="images/cd_5_angle-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Album #4</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>9.00</span>
+                                    <a href="product_page.html" title="Woo Album #4"> <img width="200" height="200" src="{% static "web/images/cd_5_angle-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Album #4</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>9.00</span>
+                                </li>%}"
+                                <li>
+                                    <a href="product_page.html" title="Woo Single #1"> <img width="200" height="200" src="{% static "web/images/cd_4_angle-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Single #1</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>3.00</span>
                                 </li>
                                 <li>
-                                    <a href="product_page.html" title="Woo Single #1"> <img width="200" height="200" src="images/cd_4_angle-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Single #1</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>3.00</span>
+                                    <a href="product_page.html" title="Woo Album #3"> <img width="200" height="200" src="{% static "web/images/cd_3_angle-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Album #3</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>9.00</span>
                                 </li>
                                 <li>
-                                    <a href="product_page.html" title="Woo Album #3"> <img width="200" height="200" src="images/cd_3_angle-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Album #3</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>9.00</span>
-                                </li>
-                                <li>
-                                    <a href="product_page.html" title="Woo Album #2"> <img width="200" height="200" src="images/cd_2_angle-200x200.jpg" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Album #2</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>9.00</span>
+                                    <a href="product_page.html" title="Woo Album #2"> <img width="200" height="200" src="{% static "web/images/cd_2_angle-200x200.jpg"%}" class="attachment-shop_thumbnail size-shop_thumbnail wp-post-image" alt=""> <span class="product-title">Woo Album #2</span> </a><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>9.00</span>
                                 </li>
                             </ul>
                         </aside>
@@ -346,20 +347,20 @@
                 </div>
             </div>
         </div>
-       <footer id="Footer" class="clearfix ">
+      <footer id="Footer" class="clearfix ">
 			<div class="widgets_wrapper ">
 				<div class="container">
 					<div class="column one-third">
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">MEET US</h6>
+									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="ijabo.html">How it works</a> </p>
-									<p> <a href="service.html">Find a vehicle</a> </p>
-									<p> <a href="index.html#pricing">Pricing</a> </p>
 									<p> <a href="about.html"> About us</a> </p>
+									<p> <a href="service.html">Service</a> </p>
+									<p> <a href="ijabo.html">How it works</a> </p>
 									<p> <a href="contact.html">Contact</a> </p>
+									<p> <a href="#">fAQs</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -368,15 +369,15 @@
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Rent a scooter
+									<h3>Simple, Affordable and Reliable Access to
 										<br>
-										<span class="themecolor">just like that!</span></h3>
+										<span class="themecolor">Clean Safe Water</span></h3>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<a href="#"><img src="images/scooterrental-footer-btn1.png"></a>
-									<a href="#"><img src="images/scooterrental-footer-btn2.png"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="contact.html">FIND OUT MORE <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
-									<hr class="no_line" style="margin:0 auto 80px"> <img src="images/scooterrental-footer-logo.png"> </div>
+									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
 					</div>
@@ -386,11 +387,11 @@
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="#">News</a> </p>
-									<p> <a href="#">FAQ</a> </p>
-									<p> <a href="#">Work</a> </p>
-									<p> <a href="#"> Franchise</a> </p>
-									<p> <a href="#">Partners</a> </p>
+									<p> <a href="#">Inuma</a> </p>
+									<p> <a href="#">Amazi</a> </p>
+									<p> <a href="#">Uhira</a> </p>
+									<p> <a href="#">Voma</a> </p>
+									<p> <a href="#">Ijabo</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -400,7 +401,7 @@
 			<div class="footer_copy">
 				<div class="container">
 					<div class="column one">
-						<div class="copyright"> &copy; 2021 BeScooterRental - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="https://1.envato.market/9ZxXY">BeantownThemes</a> </div>
+						<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 					</div>
 				</div>
 			</div>
