--- a/users/templates/website/service.html
+++ b/users/templates/website/service.html
@@ -8,24 +8,27 @@
 <!--<![endif]-->
 
 <head>
+{% load static %}
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
-	<title>Be</title>
+	<title>Water Access Rwanda</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="{% static "web/images/favicon.ico" %}">
 	<!-- FONTS -->
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Sora:100,200,300,400,400italic,500,600,700,700italic,900'>
 	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,400italic,500,600,700,700italic,900'>
 	<!-- CSS -->
-	<link rel='stylesheet' href='css/global.css'>
-	<link rel='stylesheet' href='css/structure.css'>
-	<link rel='stylesheet' href='css/scooterrental.css'>
-	<link rel='stylesheet' href='css/custom.css'> </head>
+	<link rel='stylesheet' href="{% static "web/css/global.css" %}">
+	<link rel='stylesheet' href="{% static "web/css/structure.css" %}">
+	<link rel='stylesheet' href="{% static "web/css/scooterrental.css" %}">
+	<link rel='stylesheet' href="{% static "web/css/custom.css" %}">
+	</head>
 
 <body class="page-template-default page color-custom style-simple button-custom layout-full-width if-zoom if-border-hide no-content-padding no-shadows header-classic sticky-header sticky-tb-color ab-hide subheader-both-center menu-link-color menuo-right menuo-no-borders footer-copy-center mobile-tb-hide mobile-side-slide mobile-mini-mr-ll tablet-sticky mobile-sticky ">
 	<div id="Wrapper">
@@ -36,22 +39,22 @@
 						<div class="column one">
 							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="index.html" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="images/scooterrental.png" data-retina="images/retina-scooterrental.png" data-height="50" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina></a>
 								</div>
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li> <a href="index.html"><span>Home</span></a> </li>
-											<li> <a href="about.html"><span>About us</span></a> </li>
-											<li class="current-menu-item"> <a href="service.html"><span>Service</span></a> </li>
-											<li> <a href="ijabo.html"><span>Ijabo</span></a> </li>
-											<li> <a href="blog.html"><span>Blog</span></a> </li>
-											<li> <a href="contact.html"><span>Contact</span></a> </li>
+											<li class=" current-menu-item page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
+											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
+											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
+											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
+											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
+											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
 							<div class="top_bar_right">
-								<div class="top_bar_right_wrapper"> <a href="https://1.envato.market/9ZxXY" class="action_button" target="_blank">BUY NOW</a> </div>
+								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >BUY NOW</a> </div>
 							</div>
 						</div>
 					</div>
@@ -64,7 +67,7 @@
 					<div class="entry-content">
 						<div class="section mcb-section mcb-section-a9dac33a5 full-width" style="padding-left:5%;padding-right:5%">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-91a57b284 one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url(images/scooterrental-section-bg1.png);background-repeat:no-repeat;background-position:left center">
+								<div class="wrap mcb-wrap mcb-wrap-91a57b284 one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url({% static "web/images/scooterrental-section-bg1.png" %});background-repeat:no-repeat;background-position:left center">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-1a3f3172a one-sixth column_placeholder">
 											<div class="placeholder"> &nbsp; </div>
@@ -130,7 +133,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-grpkm0axo one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="images/scooterrental-vehicles-pic1.jpg" alt="scooterrental-vehicles-pic1" title width="780" height="1061"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic1.jpg"%}" alt="scooterrental-vehicles-pic1" title width="780" height="1061"> </div>
 											</div>
 										</div>
 										
@@ -146,7 +149,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-rrpfgwgpk one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="images/scooterrental-vehicles-pic2.jpg" alt="scooterrental-vehicles-pic2" title width="780" height="1061"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic2.jpg"%}" alt="scooterrental-vehicles-pic2" title width="780" height="1061"> </div>
 											</div>
 										</div>
 										
@@ -236,15 +239,15 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-eesys0hs1 one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="images/scooterrental-vehicles-pic3.jpg" alt="scooterrental-vehicles-pic3" title width="780" height="1061"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic3.jpg"%}" alt="scooterrental-vehicles-pic3" title width="780" height="1061"> </div>
 											</div>
 										</div>
 										<div class="column mcb-column mcb-item-t0kahxzae one column_button">
-											<div class="button_align align_center"> <a class="button button_size_2 button_theme" href="#"><span class="button_label">RENT A SCOOTER</span></a> </div>
+											<div class="button_align align_center">  </div>
 										</div>
 									</div>
 								</div>
-								<div class="wrap mcb-wrap mcb-wrap-4jhj7yhbc one valign-top clearfix" style>
+								<div class="wrap mcb-wrap mcb-wrap-4jhj7yhbc one valign-top clearfix" >
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-fi41gbl4p one column_divider">
 											<hr class="no_line" style="margin:0 auto 110px"> </div>
@@ -254,7 +257,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-atnsnzqpj one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="images/scooterrental-vehicles-pic4.jpg" alt="scooterrental-vehicles-pic4" title width="780" height="1061"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-vehicles-pic4.jpg"%}" alt="scooterrental-vehicles-pic4" title width="780" height="1061"> </div>
 											</div>
 										</div>
 										
@@ -297,7 +300,7 @@
 							</div>
 							<div class="section mcb-section mcb-section-f698c00f3 full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202" >
 								<div class="section_wrapper mcb-section-inner">
-									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url(images/scooterrental-section-bg2.png);background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
+									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
 										<div class="mcb-wrap-inner">
 											<div class="column mcb-column mcb-item-dbdd0316b one-second column_column">
 												<div class="column_attr clearfix" style="padding:0 10% 0 0;">
@@ -322,90 +325,65 @@
 					</div>
 				</div>
 			</div>
-			<footer id="Footer" class="clearfix ">
-				<div class="widgets_wrapper ">
-					<div class="container">
-						<div class="column one-third">
-							<aside class="widget_text widget widget_custom_html">
-								<div class="textwidget custom-html-widget">
-									<div style="text-align: center;">
-										<h6 style="color:#7d7d7d">MEET US</h6>
-										<hr class="no_line" style="margin:0 auto 20px">
-										<p>
-											<a href="ijabo.html" >How it works</a>
-										</p>
-										<p>
-											<a href="service.html" >Find a vehicle</a>
-										</p>
-										<p>
-											<a href="index.html#pricing">Pricing</a>
-										</p>
-										<p>
-											<a href="about.html" > About us</a>
-										</p>
-										<p>
-											<a href="contact.html" >Contact</a>
-										</p>
-									</div>
+<footer id="Footer" class="clearfix ">
+			<div class="widgets_wrapper ">
+				<div class="container">
+					<div class="column one-third">
+						<aside class="widget_text widget widget_custom_html">
+							<div class="textwidget custom-html-widget">
+								<div style="text-align: center;">
+									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
+									<hr class="no_line" style="margin:0 auto 20px">
+									<p> <a href="about.html"> About us</a> </p>
+									<p> <a href="service.html">Service</a> </p>
+									<p> <a href="ijabo.html">How it works</a> </p>
+									<p> <a href="contact.html">Contact</a> </p>
+									<p> <a href="#">fAQs</a> </p>
 								</div>
-							</aside>
-						</div>
-						<div class="column one-third">
-							<aside class="widget_text widget widget_custom_html">
-								<div class="textwidget custom-html-widget">
-									<div style="text-align: center;">
-										<h3>Rent a scooter
-										<br>
-										<span class="themecolor">just like that!</span></h3>
-										<hr class="no_line" style="margin:0 auto 20px">
-										<a href="#"><img src="images/scooterrental-footer-btn1.png"></a><a href="#"><img src="images/scooterrental-footer-btn2.png"></a>
-										<hr class="no_line" style="margin:0 auto 20px">
-										<p>
-											<a href="contact.html" >FIND OUT MORE <i class="icon-right-thin" style="color:#00d285"></i></a>
-										</p>
-										<hr class="no_line" style="margin:0 auto 80px">
-										<img src="images/scooterrental-footer-logo.png">
-									</div>
-								</div>
-							</aside>
-						</div>
-						<div class="column one-third">
-							<aside class="widget_text widget widget_custom_html">
-								<div class="textwidget custom-html-widget">
-									<div style="text-align: center;">
-										<h6 style="color:#7d7d7d">MORE INFO</h6>
-										<hr class="no_line" style="margin:0 auto 20px">
-										<p>
-											<a href="#">News</a>
-										</p>
-										<p>
-											<a href="#">FAQ</a>
-										</p>
-										<p>
-											<a href="#">Work</a>
-										</p>
-										<p>
-											<a href="#"> Franchise</a>
-										</p>
-										<p>
-											<a href="#">Partners</a>
-										</p>
-									</div>
-								</div>
-							</aside>
-						</div>
-					</div>
-				</div>
-				<div class="footer_copy">
-					<div class="container">
-						<div class="column one">
-							<div class="copyright">
-								&copy; 2021 BeScooterRental - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="https://1.envato.market/9ZxXY">BeantownThemes</a>
 							</div>
-						</div>
+						</aside>
+					</div>
+					<div class="column one-third">
+						<aside class="widget_text widget widget_custom_html">
+							<div class="textwidget custom-html-widget">
+								<div style="text-align: center;">
+									<h3>Simple, Affordable and Reliable Access to
+										<br>
+										<span class="themecolor">Clean Safe Water</span></h3>
+									<hr class="no_line" style="margin:0 auto 20px">
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
+									<hr class="no_line" style="margin:0 auto 20px">
+									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<hr class="no_line" style="margin:0 auto 80px"> </div>
+							</div>
+						</aside>
+					</div>
+					<div class="column one-third">
+						<aside class="widget_text widget widget_custom_html">
+							<div class="textwidget custom-html-widget">
+								<div style="text-align: center;">
+									<h6 style="color:#7d7d7d">MORE INFO</h6>
+									<hr class="no_line" style="margin:0 auto 20px">
+									<p> <a href="#">Inuma</a> </p>
+									<p> <a href="#">Amazi</a> </p>
+									<p> <a href="#">Uhira</a> </p>
+									<p> <a href="#">Voma</a> </p>
+									<p> <a href="#">Ijabo</a> </p>
+								</div>
+							</div>
+						</aside>
 					</div>
 				</div>
-			</footer>
+			</div>
+			<div class="footer_copy">
+				<div class="container">
+					<div class="column one">
+						<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		</div>
 		<div id="Side_slide" class="right dark" data-width="250">
 			<div class="close-wrapper">
@@ -413,21 +391,21 @@
 			</div>
 			<div class="menu_wrapper"></div>
 			<div class="extras">
-				<a href="https://1.envato.market/9ZxXY" class="action_button" target="_blank">BUY NOW</a><div class="extras-wrapper"></div>
+				<a href="#" class="action_button" target="_blank">BUY NOW</a><div class="extras-wrapper"></div>
 			</div>
 		</div><div id="body_overlay"></div>
 		
 		
 
  <!-- JS -->
- <script src="js/jquery-2.1.4.min.js"></script>
+ <script src="{% static "web/js/jquery-2.1.4.min.js"></script>
 
- <script src="js/mfn.menu.js"></script>
- <script src="js/jquery.plugins.js"></script>
- <script src="js/jquery.jplayer.min.js"></script>
- <script src="js/animations/animations.js"></script>
-<script src="js/translate3d.js"></script>
- <script src="js/scripts.js"></script>
+ <script src="{% static "web/js/mfn.menu.js" %}"></script>
+ <script src="{% static "web/js/jquery.plugins.js" %}"></script>
+ <script src="{% static "web/js/jquery.jplayer.min.js" %}"></script>
+ <script src="{% static "web/js/animations/animations.js" %}"></script>
+<script src="{% static "web/js/translate3d.js" %}"></script>
+ <script src="{% static "web/js/scripts.js" %}"></script>
 	
 
 	</body>
